# LogCollector

./: CMakeLists.txt  FileTools.cpp  FileTools.h  LogCollector.cpp  LogCollector.h  Makefile  OutPut.cpp  OutPut.h  README.md  Tools.cpp  Tools.h  base64.cpp  base64.h  io.h
lib/hiredis/: async.h  hiredis-test  hiredis.h  net.c  read.h  sds.c
lib/hiredis/adapters/: libev.h  libevent.h  macosx.h  qt.h
lib/hiredis/examples/: example-qt.h
